--- a/Job Notification Tracker/app.html
+++ b/Job Notification Tracker/app.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="design-system/index.css" />
   <!-- App-level navigation and route shell styles -->
   <link rel="stylesheet" href="app.css" />
+  <!-- Phase 4: 60-job dataset (assigns window.JOBS) -->
+  <script src="data/jobs.js"></script>
 </head>
 <body>
 
@@ -106,17 +108,73 @@
 
     <!-- ── Route: /dashboard ───────────────────── -->
     <div class="route-view" data-view="/dashboard" id="view-dashboard" role="main" aria-label="Dashboard">
-      <div class="route-placeholder">
+
+      <!-- Page header -->
+      <div class="route-placeholder" style="padding-bottom: 0;">
         <span class="route-placeholder__eyebrow label text-muted">Overview</span>
         <h1 class="route-placeholder__heading">Dashboard</h1>
-        <p class="route-placeholder__subtext">Your matched jobs will appear here once tracking is active.</p>
+        <p class="route-placeholder__subtext">60 real Indian tech opportunities. Filter, save, and apply.</p>
         <div class="route-placeholder__divider" aria-hidden="true"></div>
-        <div class="empty-state">
-          <div class="empty-state__icon" aria-hidden="true">&#9744;</div>
-          <p class="empty-state__title">No jobs yet.</p>
-          <p class="empty-state__body">In the next step, you will load a realistic dataset.</p>
+      </div>
+
+      <!-- Filter bar -->
+      <div class="filter-bar" id="filter-bar" role="search" aria-label="Filter jobs">
+        <div class="filter-bar__inner">
+          <input
+            id="filter-keyword"
+            type="search"
+            class="input filter-bar__search"
+            placeholder="Search title or company…"
+            aria-label="Search by title or company"
+          />
+          <select id="filter-location" class="select filter-bar__select" aria-label="Filter by location">
+            <option value="">All Locations</option>
+            <option>Bangalore</option>
+            <option>Hyderabad</option>
+            <option>Mumbai</option>
+            <option>Pune</option>
+            <option>Chennai</option>
+            <option>Noida</option>
+            <option>Remote</option>
+          </select>
+          <select id="filter-mode" class="select filter-bar__select" aria-label="Filter by work mode">
+            <option value="">All Modes</option>
+            <option>Remote</option>
+            <option>Hybrid</option>
+            <option>Onsite</option>
+          </select>
+          <select id="filter-experience" class="select filter-bar__select" aria-label="Filter by experience">
+            <option value="">All Experience</option>
+            <option>Fresher</option>
+            <option>0-1</option>
+            <option>1-3</option>
+            <option>3-5</option>
+          </select>
+          <select id="filter-source" class="select filter-bar__select" aria-label="Filter by source">
+            <option value="">All Sources</option>
+            <option>LinkedIn</option>
+            <option>Naukri</option>
+            <option>Indeed</option>
+          </select>
+          <select id="filter-sort" class="select filter-bar__select" aria-label="Sort jobs">
+            <option value="latest">Latest First</option>
+            <option value="oldest">Oldest First</option>
+            <option value="az">A → Z (Company)</option>
+          </select>
+          <span class="filter-bar__count" id="filter-count" aria-live="polite"></span>
         </div>
       </div>
+
+      <!-- Job grid -->
+      <div class="job-grid-shell route-placeholder">
+        <div id="job-grid" class="job-grid" role="list" aria-label="Job listings"></div>
+        <div id="dashboard-empty" class="empty-state" style="display:none;">
+          <div class="empty-state__icon" aria-hidden="true">&#9744;</div>
+          <p class="empty-state__title">No matching jobs.</p>
+          <p class="empty-state__body">Try adjusting your filters to see more results.</p>
+        </div>
+      </div>
+
     </div>
 
     <!-- ── Route: /saved ──────────────────────── -->
@@ -126,10 +184,11 @@
         <h1 class="route-placeholder__heading">Saved Jobs</h1>
         <p class="route-placeholder__subtext">Positions you've bookmarked for review and future application.</p>
         <div class="route-placeholder__divider" aria-hidden="true"></div>
-        <div class="empty-state">
+        <div id="saved-grid" class="job-grid" role="list" aria-label="Saved job listings"></div>
+        <div id="saved-empty" class="empty-state">
           <div class="empty-state__icon" aria-hidden="true">&#9825;</div>
           <p class="empty-state__title">Nothing saved yet.</p>
-          <p class="empty-state__body">When you save a job from your dashboard, it will appear here for easy access.</p>
+          <p class="empty-state__body">Click “Save” on any job from the Dashboard to bookmark it here.</p>
         </div>
       </div>
     </div>
@@ -259,6 +318,37 @@
 
 
   <!-- ══════════════════════════════════════════════
+       JOB DETAIL MODAL
+  ══════════════════════════════════════════════ -->
+  <div class="modal-overlay" id="job-modal" role="dialog" aria-modal="true" aria-labelledby="modal-title" aria-hidden="true">
+    <div class="modal">
+      <div class="modal__header">
+        <div class="modal__header-titles">
+          <h2 class="modal__title" id="modal-title"></h2>
+          <span class="modal__company" id="modal-company"></span>
+        </div>
+        <button class="modal__close" id="modal-close" aria-label="Close job detail">&times;</button>
+      </div>
+      <div class="modal__body">
+        <div class="modal__meta-grid" id="modal-meta"></div>
+        <div>
+          <p class="modal__section-label">About this role</p>
+          <p class="modal__description" id="modal-description"></p>
+        </div>
+        <div>
+          <p class="modal__section-label">Skills required</p>
+          <div class="modal__skills" id="modal-skills"></div>
+        </div>
+      </div>
+      <div class="modal__footer">
+        <button class="btn job-card__btn" id="modal-save-btn">Save</button>
+        <a class="btn btn--primary" id="modal-apply-btn" target="_blank" rel="noopener noreferrer">Apply Now ↗</a>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- ══════════════════════════════════════════════
        HASH ROUTER
        No libraries. No dependencies.
        Reads window.location.hash → shows matching
@@ -380,6 +470,296 @@
         window.location.replace('#/');
       }
       navigate(getPath());
+
+    })();
+  </script>
+
+
+  <!-- ══════════════════════════════════════════════
+       PHASE 4 — JOB RENDERING ENGINE
+       Reads window.JOBS, handles filter, save, modal.
+       No framework. No dependencies.
+  ══════════════════════════════════════════════ -->
+  <script>
+    (() => {
+      'use strict';
+
+      const STORAGE_KEY = 'jnt_saved_jobs';
+
+      // ── Saved jobs (Set of ids, persisted to localStorage) ────
+      function getSaved() {
+        try {
+          const raw = localStorage.getItem(STORAGE_KEY);
+          return new Set(raw ? JSON.parse(raw) : []);
+        } catch { return new Set(); }
+      }
+
+      function setSaved(set) {
+        localStorage.setItem(STORAGE_KEY, JSON.stringify([...set]));
+      }
+
+      let saved = getSaved();
+
+      // ── Helpers ────────────────────────────────────────────────
+      function postedLabel(days) {
+        if (days === 0) return 'Posted today';
+        if (days === 1) return '1 day ago';
+        return `${days} days ago`;
+      }
+
+      function modeClass(mode) {
+        return 'job-card__mode--' + mode.toLowerCase();
+      }
+
+      function esc(str) {
+        const d = document.createElement('div');
+        d.textContent = str;
+        return d.innerHTML;
+      }
+
+      // ── Build a single job card HTML string ────────────────────
+      function buildCard(job) {
+        const isSaved = saved.has(job.id);
+        return `
+          <article class="job-card" role="listitem" data-id="${job.id}">
+            <div class="job-card__header">
+              <div class="job-card__titles">
+                <span class="job-card__title">${esc(job.title)}</span>
+                <span class="job-card__company">${esc(job.company)}</span>
+              </div>
+              <span class="job-card__source">${esc(job.source)}</span>
+            </div>
+            <div class="job-card__meta">
+              <span class="job-card__meta-item">${esc(job.location)}</span>
+              <span class="job-card__meta-item">${esc(job.experience)}</span>
+              <span class="job-card__mode ${modeClass(job.mode)}">${esc(job.mode)}</span>
+            </div>
+            <div style="display:flex; justify-content:space-between; align-items:center;">
+              <span class="job-card__salary">${esc(job.salaryRange)}</span>
+              <span class="job-card__posted">${postedLabel(job.postedDaysAgo)}</span>
+            </div>
+            <div class="job-card__footer">
+              <button class="job-card__btn job-card__btn--view" data-id="${job.id}" aria-label="View details for ${esc(job.title)}">View</button>
+              <button class="job-card__btn job-card__btn--save ${isSaved ? 'is-saved' : ''}" data-id="${job.id}" aria-label="${isSaved ? 'Unsave' : 'Save'} ${esc(job.title)}" aria-pressed="${isSaved}">
+                ${isSaved ? '&#9829; Saved' : '&#9825; Save'}
+              </button>
+              <a class="job-card__btn job-card__btn--apply" href="${esc(job.applyUrl)}" target="_blank" rel="noopener noreferrer" aria-label="Apply for ${esc(job.title)}">Apply &#8599;</a>
+            </div>
+          </article>
+        `;
+      }
+
+      // ── Render dashboard grid ──────────────────────────────────
+      function renderDashboard(jobs) {
+        const grid  = document.getElementById('job-grid');
+        const empty = document.getElementById('dashboard-empty');
+        const count = document.getElementById('filter-count');
+        if (!grid) return;
+        if (jobs.length === 0) {
+          grid.innerHTML = '';
+          grid.style.display = 'none';
+          empty.style.display = '';
+          count.textContent = '0 jobs';
+        } else {
+          grid.innerHTML = jobs.map(buildCard).join('');
+          grid.style.display = '';
+          empty.style.display = 'none';
+          count.textContent = `${jobs.length} job${jobs.length !== 1 ? 's' : ''}`;
+        }
+      }
+
+      // ── Render saved page ──────────────────────────────────────
+      function renderSaved() {
+        const grid  = document.getElementById('saved-grid');
+        const empty = document.getElementById('saved-empty');
+        if (!grid) return;
+        saved = getSaved();
+        const savedJobs = (window.JOBS || []).filter(j => saved.has(j.id));
+        if (savedJobs.length === 0) {
+          grid.innerHTML = '';
+          grid.style.display = 'none';
+          empty.style.display = '';
+        } else {
+          grid.innerHTML = savedJobs.map(buildCard).join('');
+          grid.style.display = '';
+          empty.style.display = 'none';
+        }
+      }
+
+      // ── Filter logic ───────────────────────────────────────────
+      function getFiltered() {
+        const kw  = (document.getElementById('filter-keyword')?.value  || '').toLowerCase().trim();
+        const loc = (document.getElementById('filter-location')?.value || '').toLowerCase();
+        const mod = (document.getElementById('filter-mode')?.value     || '').toLowerCase();
+        const exp = (document.getElementById('filter-experience')?.value|| '').toLowerCase();
+        const src = (document.getElementById('filter-source')?.value   || '').toLowerCase();
+        const srt = (document.getElementById('filter-sort')?.value     || 'latest');
+
+        let jobs = (window.JOBS || []).filter(j => {
+          if (kw  && !j.title.toLowerCase().includes(kw)  && !j.company.toLowerCase().includes(kw))  return false;
+          if (loc && j.location.toLowerCase()  !== loc)   return false;
+          if (mod && j.mode.toLowerCase()       !== mod)   return false;
+          if (exp && j.experience.toLowerCase() !== exp)   return false;
+          if (src && j.source.toLowerCase()     !== src)   return false;
+          return true;
+        });
+
+        if (srt === 'latest')  jobs = jobs.sort((a, b) => a.postedDaysAgo - b.postedDaysAgo);
+        if (srt === 'oldest')  jobs = jobs.sort((a, b) => b.postedDaysAgo - a.postedDaysAgo);
+        if (srt === 'az')      jobs = jobs.sort((a, b) => a.company.localeCompare(b.company));
+
+        return jobs;
+      }
+
+      function applyFilters() {
+        renderDashboard(getFiltered());
+        // Refresh save states after re-render
+        updateAllSaveButtons();
+      }
+
+      // ── Update all save button states (after toggle) ───────────
+      function updateAllSaveButtons() {
+        document.querySelectorAll('.job-card__btn--save').forEach(btn => {
+          const id = parseInt(btn.dataset.id, 10);
+          const is = saved.has(id);
+          btn.classList.toggle('is-saved', is);
+          btn.setAttribute('aria-pressed', is);
+          btn.innerHTML = is ? '&#9829; Saved' : '&#9825; Save';
+        });
+      }
+
+      // ── Toggle save ────────────────────────────────────────────
+      function toggleSave(id) {
+        saved = getSaved();
+        if (saved.has(id)) {
+          saved.delete(id);
+        } else {
+          saved.add(id);
+        }
+        setSaved(saved);
+        updateAllSaveButtons();
+        // If on saved page, re-render it
+        const savedView = document.getElementById('view-saved');
+        if (savedView && savedView.classList.contains('is-active')) {
+          renderSaved();
+        }
+        // Update modal save button if open for same job
+        const modal = document.getElementById('job-modal');
+        const modalSaveBtn = document.getElementById('modal-save-btn');
+        if (modal && modal.classList.contains('is-open') && modalSaveBtn) {
+          const modalId = parseInt(modal.dataset.jobId, 10);
+          if (modalId === id) {
+            const isSaved = saved.has(id);
+            modalSaveBtn.textContent = isSaved ? '♥ Saved' : '♡ Save';
+            modalSaveBtn.classList.toggle('is-saved', isSaved);
+          }
+        }
+      }
+
+      // ── Modal ──────────────────────────────────────────────────
+      function openModal(id) {
+        const job = (window.JOBS || []).find(j => j.id === id);
+        if (!job) return;
+
+        const modal = document.getElementById('job-modal');
+        document.getElementById('modal-title').textContent   = job.title;
+        document.getElementById('modal-company').textContent = job.company;
+        document.getElementById('modal-description').textContent = job.description;
+
+        // Meta grid
+        document.getElementById('modal-meta').innerHTML = `
+          <div class="modal__meta-item"><span class="modal__meta-label">Location</span><span class="modal__meta-value">${esc(job.location)}</span></div>
+          <div class="modal__meta-item"><span class="modal__meta-label">Mode</span><span class="modal__meta-value">${esc(job.mode)}</span></div>
+          <div class="modal__meta-item"><span class="modal__meta-label">Experience</span><span class="modal__meta-value">${esc(job.experience)}</span></div>
+          <div class="modal__meta-item"><span class="modal__meta-label">Salary</span><span class="modal__meta-value">${esc(job.salaryRange)}</span></div>
+          <div class="modal__meta-item"><span class="modal__meta-label">Source</span><span class="modal__meta-value">${esc(job.source)}</span></div>
+          <div class="modal__meta-item"><span class="modal__meta-label">Posted</span><span class="modal__meta-value">${postedLabel(job.postedDaysAgo)}</span></div>
+        `;
+
+        // Skills
+        document.getElementById('modal-skills').innerHTML =
+          job.skills.map(s => `<span class="modal__skill-tag">${esc(s)}</span>`).join('');
+
+        // Footer buttons
+        const isSaved = saved.has(id);
+        const saveBtn  = document.getElementById('modal-save-btn');
+        const applyBtn = document.getElementById('modal-apply-btn');
+        saveBtn.textContent = isSaved ? '♥ Saved' : '♡ Save';
+        saveBtn.classList.toggle('is-saved', isSaved);
+        saveBtn.dataset.id = id;
+        applyBtn.href = job.applyUrl;
+
+        modal.dataset.jobId = id;
+        modal.classList.add('is-open');
+        modal.setAttribute('aria-hidden', 'false');
+        document.body.style.overflow = 'hidden';
+        document.getElementById('modal-close').focus();
+      }
+
+      function closeModal() {
+        const modal = document.getElementById('job-modal');
+        modal.classList.remove('is-open');
+        modal.setAttribute('aria-hidden', 'true');
+        document.body.style.overflow = '';
+      }
+
+      // ── Event delegation — dashboard + saved grids ─────────────
+      document.addEventListener('click', e => {
+        // View button
+        const viewBtn = e.target.closest('.job-card__btn--view');
+        if (viewBtn) { openModal(parseInt(viewBtn.dataset.id, 10)); return; }
+
+        // Save button (card)
+        const saveBtn = e.target.closest('.job-card__btn--save');
+        if (saveBtn) { toggleSave(parseInt(saveBtn.dataset.id, 10)); return; }
+
+        // Save button (modal)
+        if (e.target.id === 'modal-save-btn') {
+          toggleSave(parseInt(e.target.dataset.id, 10)); return;
+        }
+
+        // Close modal
+        if (e.target.id === 'modal-close' || e.target.id === 'job-modal') {
+          closeModal(); return;
+        }
+      });
+
+      // Close modal on Escape
+      document.addEventListener('keydown', e => {
+        if (e.key === 'Escape') {
+          const modal = document.getElementById('job-modal');
+          if (modal && modal.classList.contains('is-open')) closeModal();
+        }
+      });
+
+      // Filter inputs — live filtering
+      ['filter-keyword','filter-location','filter-mode','filter-experience','filter-source','filter-sort'].forEach(id => {
+        const el = document.getElementById(id);
+        if (el) el.addEventListener('input', applyFilters);
+      });
+
+      // ── Integrate with router ──────────────────────────────────
+      // Hook into the navigate function the router defines by
+      // listening to hashchange and also on initial render.
+      function onRouteChange(path) {
+        if (path === '/dashboard') {
+          // Small delay so route-view.is-active is already set
+          setTimeout(() => renderDashboard(getFiltered()), 0);
+        }
+        if (path === '/saved') {
+          setTimeout(() => renderSaved(), 0);
+        }
+      }
+
+      window.addEventListener('hashchange', () => {
+        const hash = window.location.hash || '#/';
+        const path = hash.startsWith('#') ? hash.slice(1) : hash;
+        onRouteChange(path);
+      });
+
+      // Initial route
+      const initPath = (window.location.hash || '#/').slice(1) || '/';
+      onRouteChange(initPath);
 
     })();
   </script>
